[package]
name = "hackeronex"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dependencies]
reqwest = { version = "0.11", features = ["json", "socks"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.1.6", features = ["derive"] }
ctrlc = { version = "^3.2", features = ["termination"] }
walkdir = "2"
md5 = "0.7.0"
rust-crypto = "^0.2"
sqlite = "0.30.4"
chrono = "0.4.23"
colored = "2.0.0"
kdam = "0.3.0"
sqlx = { version = "^0.6", features = [ "runtime-tokio-native-tls" , "postgres", "mysql" ] }
